--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "babel-preset-react": "6.24.1",
     "cross-env": "^5.2.1",
     "css-loader": "0.28.4",
-    "express": "4.15.4",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
     "history": "4.7.2",
     "moment": "2.19.3",
-    "node-sass": "4.9.0",
+    "node-sass": "^4.13.0",
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
     "raf": "3.3.2",
