--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "cross-env": "^5.2.1",
-    "css-loader": "0.28.4",
+    "css-loader": "^3.2.1",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
@@ -54,8 +54,8 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
-    "jest": "20.0.4",
+    "jest": "^25.0.0",
     "react-test-renderer": "16.0.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack-dev-server": "^3.9.0"
   }
 }
