--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "author": "Austin P",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/AJ727/recall"
+  },
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
@@ -13,6 +17,7 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
+    "ajv": "^6.9.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -47,7 +52,7 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0"
+    "webpack": "4.41.2"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
