--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.7.4",
     "ajv": "^6.9.1",
-    "babel-cli": "6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "braces": "^3.0.2",
     "cross-env": "^5.2.1",
     "css-loader": "^3.2.1",
     "express": "^4.17.1",
-    "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "4.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "firebase": "^7.5.2",
     "history": "4.7.2",
     "moment": "2.19.3",
     "node-sass": "^4.13.0",
@@ -41,7 +42,7 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.0.1",
-    "react-modal": "2.2.2",
+    "react-modal": "^3.11.1",
     "react-particles-js": "^2.7.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
@@ -55,12 +56,14 @@
     "webpack": "4.41.2"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.5",
     "dotenv": "^6.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "^25.0.0",
     "react-test-renderer": "16.0.0",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
 }
