--- a/package.json
+++ b/package.json
@@ -51,11 +51,16 @@
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "typescript": "^3.7.3",
     "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "4.41.2"
   },
   "devDependencies": {
+    "@types/history": "^4.7.3",
+    "@types/react": "^16.9.15",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "babel-loader": "^7.1.5",
     "dotenv": "^6.2.0",
     "enzyme": "3.0.0",
@@ -63,6 +68,8 @@
     "enzyme-to-json": "3.0.1",
     "jest": "^25.0.0",
     "react-test-renderer": "16.0.0",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
