--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "chrome",
             "request": "attach",
             "name": "Attach to Chrome",
+            "urlFilter": "http://localhost:8080/*",
             "port": 9222,
             "webRoot": "${workspaceFolder}"
         },
