--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.7.4",
+    "@types/express": "^4.17.2",
     "ajv": "^6.9.1",
     "babel-cli": "^6.26.0",
     "babel-core": "6.25.0",
