--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
     "raf": "3.3.2",
-    "react": "16.0.0",
+    "react": "^16.8.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
-    "react-dom": "16.0.1",
+    "react-dom": "^16.8.0",
     "react-modal": "^3.11.1",
     "react-particles-js": "^2.7.0",
     "react-redux": "5.0.5",
